<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhonlopera.nerd30.ConfiguracionFragment"
    android:background="@drawable/fondo1234">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/logoapp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
             android:visibility="gone"
                android:id="@+id/lineareditarnombre"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreperfil"
                    android:textColorHint="@color/white"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:id="@+id/enuevonombre"
                    android:textColor="@color/whitesmoke"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cambio"
                        android:background="@drawable/boton_redondo"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:id="@+id/btconfirmar"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:background="@drawable/boton_redondo"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:id="@+id/btcancelar"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiarnombreperfil"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:id="@+id/btcambiarnombre"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:id="@+id/lineareliminar">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/avisoeliminar"
                        android:textColor="@color/wheat"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="center"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Confirmar"
                        android:id="@+id/bconfirmareliminar"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/boton_redondo"
                        android:text=" Eliminar cuenta "
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:id="@+id/beliminar"/>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


</FrameLayout>
